// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initHTTPTransaction httpTransaction should fail on timeout 1`] = `
Object {
  "apmCalls": Array [],
  "delayClearCalls": Array [],
  "delayCreateCalls": Array [
    Array [
      30000,
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "💱 - HTTP Transaction initialized.",
    ],
  ],
  "obfuscateCalls": Array [],
  "obfuscateSensibleHeadersCalls": Array [
    Array [
      Object {
        "x-forwarded-for": "127.0.0.1",
      },
    ],
  ],
  "obfuscateSensiblePropsCalls": Array [],
  "request": Object {
    "body": Object {
      "connection": Object {
        "encrypted": true,
      },
      "headers": Object {
        "x-forwarded-for": "127.0.0.1",
      },
      "ip": "127.0.0.1",
      "method": "GET",
      "socket": Object {
        "bytesRead": 16,
        "bytesWritten": 64,
      },
      "ts": 1000000,
      "url": "/v1/users/1?extended=true",
    },
    "headers": Object {
      "x-forwarded-for": "127.0.0.1",
    },
    "method": "get",
    "url": "/v1/users/1?extended=true",
  },
  "timeCalls": Array [
    Array [],
  ],
  "uniqueIdCalls": Array [
    Array [],
  ],
}
`;

exports[`initHTTPTransaction httpTransaction should fail with non-unique transaction id 1`] = `
Object {
  "delayClearCalls": Array [],
  "delayCreateCalls": Array [
    Array [
      30000,
    ],
  ],
  "obfuscateCalls": Array [],
  "obfuscateSensibleHeadersCalls": Array [
    Array [
      Object {
        "transaction-id": "lol",
        "x-forwarded-for": "127.0.0.1",
      },
    ],
  ],
  "obfuscateSensiblePropsCalls": Array [],
  "timeCalls": Array [
    Array [],
  ],
  "uniqueIdCalls": Array [
    Array [],
  ],
}
`;

exports[`initHTTPTransaction httpTransaction should work 1`] = `
Object {
  "apmCalls": Array [
    Array [
      "CALL",
      Object {
        "endInBytes": 16,
        "endOutBytes": 64,
        "endTime": 1326585600000,
        "errored": false,
        "id": "[id]",
        "ip": "127.0.0.1",
        "method": "GET",
        "operationId": "theOperationId",
        "protocol": "http",
        "reqHeaders": undefined,
        "resHeaders": Object {
          "Content-Type": "application/json",
        },
        "startInBytes": 16,
        "startOutBytes": 64,
        "startTime": 1326585600000,
        "statusCode": 200,
        "url": "/v1/users/1?extended=true",
      },
    ],
  ],
  "buildResponseCalls": Array [
    Array [],
  ],
  "delayClearCalls": Array [
    Array [
      Promise {},
    ],
  ],
  "delayCreateCalls": Array [
    Array [
      30000,
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "💱 - HTTP Transaction initialized.",
    ],
  ],
  "obfuscateCalls": Array [],
  "obfuscateSensibleHeadersCalls": Array [
    Array [
      Object {
        "x-forwarded-for": "127.0.0.1",
      },
    ],
  ],
  "obfuscateSensiblePropsCalls": Array [],
  "request": Object {
    "body": Object {
      "connection": Object {
        "encrypted": true,
      },
      "headers": Object {
        "x-forwarded-for": "127.0.0.1",
      },
      "ip": "127.0.0.1",
      "method": "GET",
      "socket": Object {
        "bytesRead": 16,
        "bytesWritten": 64,
      },
      "ts": 1000000,
      "url": "/v1/users/1?extended=true",
    },
    "headers": Object {
      "x-forwarded-for": "127.0.0.1",
    },
    "method": "get",
    "url": "/v1/users/1?extended=true",
  },
  "timeCalls": Array [
    Array [],
    Array [],
  ],
  "uniqueIdCalls": Array [
    Array [],
  ],
}
`;

exports[`initHTTPTransaction should work 1`] = `
Object {
  "apmCalls": Array [],
  "delayClearCalls": Array [],
  "delayCreateCalls": Array [],
  "logCalls": Array [
    Array [
      "debug",
      "💱 - HTTP Transaction initialized.",
    ],
  ],
  "obfuscateCalls": Array [],
  "obfuscateSensibleHeadersCalls": Array [],
  "obfuscateSensiblePropsCalls": Array [],
  "timeCalls": Array [],
  "uniqueIdCalls": Array [],
}
`;
